--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -6,8 +6,8 @@
     text-align: center;
     display: flex;
     flex-flow: column;
-    width: 500px;
     overflow: hidden;
+    height: 100vh;
   }
   
   .header {
@@ -53,7 +53,10 @@
   }
   
   .input {
-    position: relative;
+    position: absolute;
+    bottom: 0;
+    width: 49.5%;
+    /* width: 500px; */
   }
   
   .input > form > input[type="text"] {
@@ -68,7 +71,7 @@
     box-sizing: border-box;
     opacity: 1;
     outline: none;
-    padding: 16px 52px 16px 10px;
+    padding: 16px 52px 16px 10px;  
     width: 100%;
     -webkit-appearance: none;
   }
