--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -22,11 +22,13 @@
   
   .messages {
     width: 100%;
-    height: 400px;
+    height: 100vh;
     overflow: auto;
     display: flex;
-    flex-direction: column;
     padding: 10px 0px;
+    overflow: auto;
+    flex-direction: column;
+    margin-bottom: 60px;
   }
   
   .message-container {
@@ -41,6 +43,7 @@
     background: #00aaa5;
     color: white;
     min-width: 40px;
+    max-width: 80%;
   }
   
   .user-message {
@@ -59,7 +62,7 @@
     /* width: 500px; */
   }
   
-  .input > form > input[type="text"] {
+  .input > .form > input[type="text"] {
     font-family: monospace;
     font-size: 16px;
     border: 0;
@@ -76,11 +79,11 @@
     -webkit-appearance: none;
   }
   
-  .input > form > input:focus {
+  .input > .form > input:focus {
     outline: none;
   }
   
-  .input > form > button {
+  .input > .form > button {
     background-color: transparent;
     border: 0;
     border-bottom-right-radius: 10px;
